fixing some spacing

--- a/dev/less/styles.less
+++ b/dev/less/styles.less
@@ -271,6 +271,9 @@ a {
 	&:first-child {
 		margin-top: 0;
 	}
+	#works ~ & {
+		margin-top: 100px;
+	}
 	.header {
 		font-size: 2em;
 		color: rgba(255, 255, 255, .2);
